# PageIndex_Chat_UI-main

./: .gitignore  AGENTS.md  AGENT_README.md  AGENT_README_EN.md  LICENSE  Neuropsych Agent Bot for PageIndex RAG.md  README.md  README_EN.md  app.py  config.py  main.py  pageindex.md  pyproject.toml  requirements.txt  start.sh  tasks_for_ui.html  tasks_for_ui.qmd
.omx/: metrics.json
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
image/: AGENTS.md
models/: AGENTS.md  __init__.py  document.py
pageindex/: AGENTS.md  __init__.py  page_index.py  utils.py
routes/: AGENTS.md  __init__.py  api.py  socket_handlers.py
services/: AGENTS.md  __init__.py  agent.py  indexing_service.py  rag_service.py  skill_manager.py
services/tools/: __init__.py  base.py  keyword_search.py  node_reader.py  page_viewer.py  summarizer.py  tree_search.py
skills/: AGENTS.md  formula_explainer.md  key_info_extraction.md  paper_comparison.md  table_extraction.md
static/: AGENTS.md
static/js/: app.js
templates/: AGENTS.md  index.html
